fix: grid should have a gap

--- a/site2/src/layouts/grid/_grid.scss
+++ b/site2/src/layouts/grid/_grid.scss
@@ -1,6 +1,7 @@
 .l-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  column-gap: 1.5rem;
 
   &__fill {
     grid-column: 1 / -1;
